<resources>
    <string name="app_name">12-Step Meeting Finder and Recovery Guide</string>
    <string name="app_website">www.recoverymeetingfinder.com</string>
    <string name="home">Home</string>
    <string name="meetings">Meetings</string>
    <string name="meetings_map_filter">Meetings Map Filter</string>
    <string name="meetings_filter">Meetings Filter</string>
    <string name="audio">Audio</string>
    <string name="program">Program</string>
    <string name="more">More</string>
    <string name="daily_reflection">Daily Reflection</string>
    <string name="daily_reflection_copyright">From the book Daily Reflections. Copyright © 1990 Alcoholics Anonymous World Services, Inc. All rights reserved.</string>
    <string name="sobriety_date">Sobriety Date</string>
    <string name="days">Days</string>
    <string name="step">Step</string>
    <string name="prayers">Prayers</string>
    <string name="readings">Readings</string>
    <string name="book_contents">Book Contents</string>
    <string name="go_to_page">Go to Page</string>
    <string name="invalid_page_number">Invalid Page Number</string>
    <string name="daily_image">Daily Image</string>
    <string name="thought_for_the_day">Thought for the Day</string>
    <string name="just_for_today">Just for Today</string>
    <string name="search_filter">Search Filter</string>
    <string name="toggle_map">Toggle Map</string>
    <string name="search_bar_hint">Enter location or postcode</string>
    <string name="fetching_daily_reflection">Fetching from aa.org</string>
    <string name="fetching_thought_for_the_day">Fetching from hazeldenbettyford.org</string>
    <string name="fetching_just_for_the_day">Fetching from jftna.org</string>
    <string name="no_network">Unable to connect to the internet. Check your connection and try again.</string>
    <string name="resource_unavailable">"Unable to retrieve resource. Contact support@recoverymeetingfinder.com"</string>
    <string name="meditation_for_the_day">Meditation for the Day</string>
    <string name="prayer_for_the_day">Prayer for the Day</string>
    <string name="meetings_london">aa-london.com</string>
    <string name="meetings_worldwide">aa-intergroup.org</string>
    <string name="share">Share</string>
    <string name="step1">“We admitted we were powerless over alcohol - that our lives had become unmanageable.“</string>
    <string name="step2">“Came to believe that a Power greater than ourselves could restore us to sanity.“</string>
    <string name="step3">“Made a decision to turn our will and our lives over to the care of God as we understood Him.“</string>
    <string name="step4">“Made a searching and fearless moral inventory of ourselves.“</string>
    <string name="step5">“Admitted to God, to ourselves and to another human being the exact nature of our wrongs.“</string>
    <string name="step6">“Were entirely ready to have God remove all these defects of character.“</string>
    <string name="step7">“Humbly asked Him to remove our shortcomings.“</string>
    <string name="step8">“Made a list of all persons we had harmed, and became willing to make amends to them all.“</string>
    <string name="step9">“Made direct amends to such people wherever possible, except when to do so would injure them or others.“</string>
    <string name="step10">“Continued to take personal inventory and when we were wrong promptly admitted it.“</string>
    <string name="step11">“Sought through prayer and meditation to improve our conscious contact with God as we understood Him, praying only for knowledge of His will for us and the power to carry that out.“</string>
    <string name="step12">“Having had a spiritual awakening as the result of these steps, we tried to carry this message to alcoholics and to practice these principles in all our affairs.“</string>
    <string name="programs">Programs</string>
    <string name="alcoholics_anonymous">Alcoholics Anonymous</string>
    <string name="cocaine_anonymous">Cocaine Anonymous</string>
    <string name="narcotics_anonymous">Narcotics Anonymous</string>
    <string name="overeaters_anonymous">Overeaters Anonymous</string>
    <string name="time">Time</string>
    <string name="weekday">Weekday</string>
    <string name="distance">Distance</string>
    <string name="search_range">Search Range</string>
    <string name="units">Units</string>
    <string name="accessibility">Accessibility</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="share_link">Shared with 12-Step Recovery Guide. Get it on Google Play. https://play.google.com/store/apps/details?id=com.citex.twelve_step_recovery</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="health_declaration"><u>Health Declaration</u></string>
    <string name="app_website_link"><u>recoverymeetingfinder.com</u></string>
    <string name="app_email_link"><u>support@recoverymeetingfinder.com</u></string>
</resources>