<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.home.thought_for_the_day.ThoughtForTheDayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="-50dp">

            <ProgressBar
                android:id="@+id/progress_loader"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/text_progress_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/fetching_thought_for_the_day"
                app:layout_constraintTop_toBottomOf="@id/progress_loader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/thought_for_the_day_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="100dp" >

            <TextView
                android:id="@+id/text_thought_for_the_day_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_calendar_today_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_thought_for_the_day_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                android:text="@string/thought_for_the_day"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_thought_for_the_day_date"/>

            <TextView
                android:id="@+id/text_thought_for_the_day_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_thought_for_the_day_title"/>

            <TextView
                android:id="@+id/text_meditation_for_the_day_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/meditation_for_the_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_thought_for_the_day_content"/>

            <TextView
                android:id="@+id/text_meditation_for_the_day_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_meditation_for_the_day_title"/>

            <TextView
                android:id="@+id/text_prayer_for_the_day_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/prayer_for_the_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_meditation_for_the_day_content"/>

            <TextView
                android:id="@+id/text_prayer_for_the_day_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_prayer_for_the_day_title"/>

            <TextView
                android:id="@+id/text_thought_for_the_day_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:drawablePadding="10dp"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_prayer_for_the_day_content"/>

            <TextView
                android:id="@+id/text_thought_for_the_day_share"
                android:layout_width="102dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:drawablePadding="7dp"
                android:textSize="19dp"
                android:text="@string/share"
                android:background="@drawable/textview_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_thought_for_the_day_copyright"
                app:drawableStartCompat="@drawable/ic_share_24dp"
                tools:ignore="SpUsage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>